--- a/templates/admin_tags.html
+++ b/templates/admin_tags.html
@@ -92,5 +92,5 @@
 {% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/admin_tags.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/admin_tags.css') }}?v={{ static_version }}" />
 {% endblock %}
