--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -104,9 +104,9 @@
 {% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/admin_users.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/admin_users.css') }}?v={{ static_version }}" />
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', path='/js/admin_users.js') }}" defer></script>
+<script src="{{ url_for('static', path='/js/admin_users.js') }}?v={{ static_version }}" defer></script>
 {% endblock %}
