--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>{% block title %}FoodPlanner{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', path='/css/style.css') }}?v={{ static_version }}" />
     {% block extra_styles %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='/templates/favicon.ico') }}" />
 </head>
@@ -87,7 +87,7 @@
     </div>
 </footer>
 
-<script src="{{ url_for('static', path='/js/layout.js') }}" defer></script>
+<script src="{{ url_for('static', path='/js/layout.js') }}?v={{ static_version }}" defer></script>
 {% block extra_scripts %}{% endblock %}
 </body>
 </html>
