--- a/templates/menu_builder.html
+++ b/templates/menu_builder.html
@@ -160,9 +160,9 @@
 {% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/menu.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/menu.css') }}?v={{ static_version }}" />
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', path='/js/menu_builder.js') }}" defer></script>
+<script src="{{ url_for('static', path='/js/menu_builder.js') }}?v={{ static_version }}" defer></script>
 {% endblock %}
