--- a/templates/menu_list.html
+++ b/templates/menu_list.html
@@ -58,5 +58,5 @@
 {% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/menu.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/menu.css') }}?v={{ static_version }}" />
 {% endblock %}
