--- a/templates/recipe_new.html
+++ b/templates/recipe_new.html
@@ -155,9 +155,9 @@
 {% endblock %}
 
 {% block extra_styles %}
-<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/recipe_form.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', path='/css/pages/recipe_form.css') }}?v={{ static_version }}" />
 {% endblock %}
 
 {% block extra_scripts %}
-<script src="{{ url_for('static', path='/js/recipe_form.js') }}" defer></script>
+<script src="{{ url_for('static', path='/js/recipe_form.js') }}?v={{ static_version }}" defer></script>
 {% endblock %}
