--- a/templates/recipe_edit.html
+++ b/templates/recipe_edit.html
@@ -156,6 +156,7 @@
                                 <option value="ml" {% if unit == 'ml' %}selected{% endif %}>миллилитры</option>
                                 <option value="tbsp" {% if unit == 'tbsp' %}selected{% endif %}>ст. л.</option>
                                 <option value="tsp" {% if unit == 'tsp' %}selected{% endif %}>ч. л.</option>
+                                <option value="pcs" {% if unit == 'pcs' %}selected{% endif %}>штуки</option>
                                 <option value="taste" {% if unit == 'taste' %}selected{% endif %}>по вкусу</option>
                             </select>
                         </div>
@@ -181,6 +182,7 @@
                                 <option value="ml">миллилитры</option>
                                 <option value="tbsp">ст. л.</option>
                                 <option value="tsp">ч. л.</option>
+                                <option value="pcs">штуки</option>
                                 <option value="taste">по вкусу</option>
                             </select>
                         </div>
