--- a/templates/recipe_new.html
+++ b/templates/recipe_new.html
@@ -128,6 +128,7 @@
                                 <option value="ml">миллилитры</option>
                                 <option value="tbsp">ст. л.</option>
                                 <option value="tsp">ч. л.</option>
+                                <option value="pcs">штуки</option>
                                 <option value="taste">по вкусу</option>
                             </select>
                         </div>
