--- a/templates/admin_tags.html
+++ b/templates/admin_tags.html
@@ -8,6 +8,7 @@
         <div class="admin-nav">
             <a href="{{ url_for('admin_users') }}" class="admin-nav__link">Пользователи</a>
             <a href="{{ url_for('admin_tags') }}" class="admin-nav__link admin-nav__link--active">Теги</a>
+            <a href="{{ url_for('admin_ingredients') }}" class="admin-nav__link">Ингредиенты</a>
         </div>
         <div class="admin-tags__header">
             <div>
