--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -11,6 +11,7 @@
         <div class="admin-nav">
             <a href="{{ url_for('admin_users') }}" class="admin-nav__link admin-nav__link--active">Пользователи</a>
             <a href="{{ url_for('admin_tags') }}" class="admin-nav__link">Теги</a>
+            <a href="{{ url_for('admin_ingredients') }}" class="admin-nav__link">Ингредиенты</a>
         </div>
         <div class="admin-users__header">
             <div>
